src/main/java/rithm/parsertools/ptltl/ptltlgrammarParser.java
// Generated from ptltlgrammar.g4 by ANTLR 4.2

	package rithm.parsertools.ptltl;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ptltlgrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__3=1, T__2=2, T__1=3, T__0=4, PREDNAME=5, ANDNODE=6, ORNODE=7, IFFNODE=8, 
		IFNODE=9, SINCENODE=10, EVENTUALLYPASTNODE=11, GLOBALLYPASTNODE=12, PREVIOUSLY=13, 
		NOTNODE=14, WS=15;
	public static final String[] tokenNames = {
		"<INVALID>", "'('", "')'", "'F[ALSE]'", "'T[RUE]'", "PREDNAME", "'&&'", 
		"'||'", "'<->'", "'->'", "'S'", "'<*>'", "'[*]'", "'X*'", "'!'", "WS"
	};
	public static final int
		RULE_ptltl = 0, RULE_pred = 1, RULE_unaryNonTemporal = 2, RULE_binaryNonTemporal = 3, 
		RULE_binaryTemporal = 4, RULE_unaryTemporal = 5;
	public static final String[] ruleNames = {
		"ptltl", "pred", "unaryNonTemporal", "binaryNonTemporal", "binaryTemporal", 
		"unaryTemporal"
	};

	@Override
	public String getGrammarFileName() { return "ptltlgrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		

	public ptltlgrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PtltlContext extends ParserRuleContext {
		public BinaryTemporalContext binaryTemporal() {
			return getRuleContext(BinaryTemporalContext.class,0);
		}
		public PtltlContext ptltl(int i) {
			return getRuleContext(PtltlContext.class,i);
		}
		public List<PtltlContext> ptltl() {
			return getRuleContexts(PtltlContext.class);
		}
		public PredContext pred() {
			return getRuleContext(PredContext.class,0);
		}
		public TerminalNode WS() { return getToken(ptltlgrammarParser.WS, 0); }
		public UnaryTemporalContext unaryTemporal() {
			return getRuleContext(UnaryTemporalContext.class,0);
		}
		public BinaryNonTemporalContext binaryNonTemporal() {
			return getRuleContext(BinaryNonTemporalContext.class,0);
		}
		public UnaryNonTemporalContext unaryNonTemporal() {
			return getRuleContext(UnaryNonTemporalContext.class,0);
		}
		public PtltlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ptltl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ptltlgrammarListener ) ((ptltlgrammarListener)listener).enterPtltl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ptltlgrammarListener ) ((ptltlgrammarListener)listener).exitPtltl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ptltlgrammarVisitor ) return ((ptltlgrammarVisitor<? extends T>)visitor).visitPtltl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PtltlContext ptltl() throws RecognitionException {
		return ptltl(0);
	}

	private PtltlContext ptltl(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PtltlContext _localctx = new PtltlContext(_ctx, _parentState);
		PtltlContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_ptltl, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			switch (_input.LA(1)) {
			case NOTNODE:
				{
				setState(13); unaryNonTemporal();
				setState(14); ptltl(5);
				}
				break;
			case EVENTUALLYPASTNODE:
			case GLOBALLYPASTNODE:
			case PREVIOUSLY:
				{
				setState(16); unaryTemporal();
				setState(17); ptltl(4);
				}
				break;
			case 3:
			case 4:
			case PREDNAME:
				{
				setState(19); pred();
				}
				break;
			case 1:
				{
				setState(20); match(1);
				setState(21); ptltl(0);
				setState(22); match(2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(38);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(36);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new PtltlContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_ptltl);
						setState(26);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(27); binaryNonTemporal();
						setState(28); ptltl(4);
						}
						break;

					case 2:
						{
						_localctx = new PtltlContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_ptltl);
						setState(30);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(31); binaryTemporal();
						setState(32); ptltl(3);
						}
						break;

					case 3:
						{
						_localctx = new PtltlContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_ptltl);
						setState(34);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(35); match(WS);
						}
						break;
					}
					} 
				}
				setState(40);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class PredContext extends ParserRuleContext {
		public TerminalNode PREDNAME() { return getToken(ptltlgrammarParser.PREDNAME, 0); }
		public PredContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pred; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ptltlgrammarListener ) ((ptltlgrammarListener)listener).enterPred(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ptltlgrammarListener ) ((ptltlgrammarListener)listener).exitPred(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ptltlgrammarVisitor ) return ((ptltlgrammarVisitor<? extends T>)visitor).visitPred(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PredContext pred() throws RecognitionException {
		PredContext _localctx = new PredContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pred);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 3) | (1L << 4) | (1L << PREDNAME))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnaryNonTemporalContext extends ParserRuleContext {
		public TerminalNode NOTNODE() { return getToken(ptltlgrammarParser.NOTNODE, 0); }
		public UnaryNonTemporalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryNonTemporal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ptltlgrammarListener ) ((ptltlgrammarListener)listener).enterUnaryNonTemporal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ptltlgrammarListener ) ((ptltlgrammarListener)listener).exitUnaryNonTemporal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ptltlgrammarVisitor ) return ((ptltlgrammarVisitor<? extends T>)visitor).visitUnaryNonTemporal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnaryNonTemporalContext unaryNonTemporal() throws RecognitionException {
		UnaryNonTemporalContext _localctx = new UnaryNonTemporalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_unaryNonTemporal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43); match(NOTNODE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinaryNonTemporalContext extends ParserRuleContext {
		public TerminalNode ORNODE() { return getToken(ptltlgrammarParser.ORNODE, 0); }
		public TerminalNode IFNODE() { return getToken(ptltlgrammarParser.IFNODE, 0); }
		public TerminalNode ANDNODE() { return getToken(ptltlgrammarParser.ANDNODE, 0); }
		public TerminalNode IFFNODE() { return getToken(ptltlgrammarParser.IFFNODE, 0); }
		public BinaryNonTemporalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binaryNonTemporal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ptltlgrammarListener ) ((ptltlgrammarListener)listener).enterBinaryNonTemporal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ptltlgrammarListener ) ((ptltlgrammarListener)listener).exitBinaryNonTemporal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ptltlgrammarVisitor ) return ((ptltlgrammarVisitor<? extends T>)visitor).visitBinaryNonTemporal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BinaryNonTemporalContext binaryNonTemporal() throws RecognitionException {
		BinaryNonTemporalContext _localctx = new BinaryNonTemporalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_binaryNonTemporal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ANDNODE) | (1L << ORNODE) | (1L << IFFNODE) | (1L << IFNODE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinaryTemporalContext extends ParserRuleContext {
		public TerminalNode SINCENODE() { return getToken(ptltlgrammarParser.SINCENODE, 0); }
		public BinaryTemporalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binaryTemporal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ptltlgrammarListener ) ((ptltlgrammarListener)listener).enterBinaryTemporal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ptltlgrammarListener ) ((ptltlgrammarListener)listener).exitBinaryTemporal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ptltlgrammarVisitor ) return ((ptltlgrammarVisitor<? extends T>)visitor).visitBinaryTemporal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BinaryTemporalContext binaryTemporal() throws RecognitionException {
		BinaryTemporalContext _localctx = new BinaryTemporalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_binaryTemporal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47); match(SINCENODE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnaryTemporalContext extends ParserRuleContext {
		public TerminalNode PREVIOUSLY() { return getToken(ptltlgrammarParser.PREVIOUSLY, 0); }
		public TerminalNode EVENTUALLYPASTNODE() { return getToken(ptltlgrammarParser.EVENTUALLYPASTNODE, 0); }
		public TerminalNode GLOBALLYPASTNODE() { return getToken(ptltlgrammarParser.GLOBALLYPASTNODE, 0); }
		public UnaryTemporalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryTemporal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ptltlgrammarListener ) ((ptltlgrammarListener)listener).enterUnaryTemporal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ptltlgrammarListener ) ((ptltlgrammarListener)listener).exitUnaryTemporal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ptltlgrammarVisitor ) return ((ptltlgrammarVisitor<? extends T>)visitor).visitUnaryTemporal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnaryTemporalContext unaryTemporal() throws RecognitionException {
		UnaryTemporalContext _localctx = new UnaryTemporalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_unaryTemporal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EVENTUALLYPASTNODE) | (1L << GLOBALLYPASTNODE) | (1L << PREVIOUSLY))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 0: return ptltl_sempred((PtltlContext)_localctx, predIndex);
		}
		return true;
	}
	private boolean ptltl_sempred(PtltlContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0: return precpred(_ctx, 3);

		case 1: return precpred(_ctx, 2);

		case 2: return precpred(_ctx, 1);
		}
		return true;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}